# desktop

./: .gitignore  .pre-commit-config.yaml  Dockerfile  HOW_TO_USE_NEW_TOOLS.md  README.md  add_missing_cladepp_features.py  comprehensive_ml_analysis_results.csv  create_separate_category_tables.py  docker-compose.yml  example_usage.py  extract_random_kegg_genes.py  main.py  multi_feature_models_summary.csv  practical_examples.py  pyproject.toml  requirements.txt  setup.py  simple_example.py  species_information.csv  top_individual_features.csv
.github/workflows/: ci.yml
FINAL_TOOL/: CONDA_SETUP.md  INSTALL.md  README.md  SUMMARY.md  __init__.py  config.py  environment.yml  mgc_predictor.py  requirements.txt  setup.py
FINAL_TOOL/annotation/: __init__.py  kegg_annotator.py
FINAL_TOOL/candidate_finder/: __init__.py  sliding_window.py
FINAL_TOOL/data/: README.md
FINAL_TOOL/feature_extraction/: __init__.py  cladepp_features.py  docking_features.py  e2p2_features.py  foldseek_features.py  promoter_features.py
FINAL_TOOL/models/: README.md  combined_model_feature_order.txt
FINAL_TOOL/parsers/: gff3_parser.py
FINAL_TOOL/prediction/: __init__.py  model_predictor.py
FINAL_TOOL/utils/: sequence_utils.py
MGCs/: BGC0000670.gbk  BGC0000671.gbk  BGC0001315.gbk  BGC0001316.gbk  BGC0001322.gbk  BGC0001799.gbk  BGC0001997.gbk  BGC0002389.gbk  BGC0002392.gbk  BGC0002394.gbk  BGC0002396.gbk  BGC0002397.gbk  BGC0002399.gbk  BGC0002400.gbk  BGC0002401.gbk  BGC0002402.gbk  BGC0002403.gbk  BGC0002405.gbk  BGC0002622.gbk  BGC0002723.gbk  BGC0002724.gbk  combined_gene_proteins.fasta  combined_gene_proteins_remove_duplicates.fasta  gene_sequences.txt  mgcs_database_protein_split.pin
MGCs/Plant_MGC/: BGC0000669.gbk  BGC0000672.gbk  BGC0000798.gbk  BGC0001313.gbk  BGC0001314.gbk  BGC0001317.gbk  BGC0001318.gbk  BGC0001323.gbk  BGC0001324.gbk  BGC0001325.gbk  BGC0001756.gbk  BGC0002390.gbk  BGC0002391.gbk  BGC0002393.gbk  BGC0002395.gbk  BGC0002398.gbk  BGC0002404.gbk  BGC0002406.gbk  BGC0002721.gbk  BGC0002722.gbk
MGCs/all_genes_from_mibig/: cluster_count.txt
MGCs/mgcs_database/: mgcs_database.ndb  mgcs_database.nhr  mgcs_database.nin  mgcs_database.nsq
MGCs/mgcs_database_genes_split/: mgcs_database_genes_split.ndb  mgcs_database_genes_split.nhr  mgcs_database_genes_split.nin  mgcs_database_genes_split.nsq
MGCs/mgcs_database_protein_split/: mgcs_database_protein_split.phd  mgcs_database_protein_split.phi  mgcs_database_protein_split.phr  mgcs_database_protein_split.pos  mgcs_database_protein_split.psq
MGCs/plant_sequences/: combined_gene_proteins_test.fasta  combined_gene_split.fasta  protein_sequences.txt
arabidopsis/arabidopsis_db/: Arabidopsis_thaliana.pin  Arabidopsis_thaliana.pot  Arabidopsis_thaliana.pto
config/: bioinformatics_config.json  sample_pipeline.json
core/: __init__.py  base.py  config.py  exceptions.py  types.py
example_jobs/: copy_first_sequence.sh  create_blast_db.sh  merge_gff3.sh  node_login_job.sh  out.OU  run_bfd_download.sh  test_job.sh
python_scripts/: adjacent_genes_coexpression.py  blast_mibig_vs_all_genomes_parallel.py  check_module_metabolic.py  check_module_metabolic_oop.py  convert_gbk_to_fasta.py  convert_pmn_protein_unique_id_set_to_fasta  count_genes_in_each_organism.py  count_num_of_pathways_in_plantcyc.py  extract_dblinks_for_plantcyc_proteins.py  filter_ensembl_by_id.py  filter_normalized_composite_score_for_qid.py  keep_longest_transcript.py  kegg_pathway_extractor.py  kegg_pathway_extractor_cluster.py  kegg_pathway_extractor_local.py  kegg_pathway_extractor_oop.py  merge_sequence_files.py  mgc_length_comparison.py  migration_report.md  normalize_blast_results.py  phytozome_test.py  plantcyc_on_mibig_perfect_hits.py  process_organism.py  process_organism_oop.py
python_scripts/asaph_aharoni/: comparison_csv_pipeline.py  comparison_csv_pipeline_oop.py  find_cluster_in_chromosomes.py  find_homolog_genes_for_asaph_cluster.py  single_multi_chromosome_cluster_statistics.py  visualize_clusters.py  visualize_timetree.py
python_scripts/core/: base_classes.py
python_scripts/fasta_and_blast/: convert_blast_output6_to_csv.py  count_genes_in_each_organism.py  extract_info_from_header.py  filter_alignments_with_low_tmscore.py  find_hubs.py  keep_longest_transcript.py  merge_fasta_files.py  merge_sequence_files.py  nucl_seq_to_prot_seq.py  order_fasta_by_location.py  run_sliding_window_by_blast.py  update_fasta_headers.py
python_scripts/features/: comprehensive_incremental_analysis.py  comprehensive_ml_analysis.py  create_all_features_averages_table.py  extract_enhanced_features.py  fix_all_categories.py  recreate_csv_from_existing_results.py  regenerate_all_feature_metrics.py
python_scripts/gbk_scripts/: convert_gbk_to_fasta_gene_split.py  convert_gbk_to_fasta_protein_split.py  count_num_of_clusters.py  max_distance_between_consecutive_genes_in_cluster.py
python_scripts/just_scripts/: add_suffix_to_genes.py  create_df.py  csv_from_fasta.py  extract_zip.py  load_gff3.py  merge_csv.py  min_max_csv.py  move_dirs.py  print_third_column.py  process_genes.py  remove_alt_splicing_from_gff.py  rename_column.py  rename_files.py  sort_csv.py
python_scripts/mgc_candidates/: alphafold_predictions_candidates.py  candidate_gene_counter.py  gene_count_merger.py  pathway_gene_counter.py  pathway_matcher.py
python_scripts/mgc_scripts/: check_candidate_identity.py  create_fasta_from_csv_fasta_with_e2p2.py  create_fasta_from_csv_fasta_without_e2p2.py  csv_to_fasta.py  gbk_to_csv.py  pairwise_score_of_filtered_out_window_mgc_genes.py
python_scripts/pmn_scripts/: count_num_of_genes_except_plantcyc.py  count_num_of_pathways_in_plantcyc.py  evo_cons.py  extract_dblinks_for_plantcyc_proteins.py  extract_phytozome_sequence_for_mgc.py  filter_ensembl_by_id.py  filter_ensembl_chloroplastic_genes.py  (+5 more)
tests/: conftest.py
utils/: __init__.py  api_clients.py  concurrent.py  file_operations.py  logging.py  statistical.py  visualization.py
workflows/: __init__.py  base_workflow.py  blast_workflow.py  kegg_workflow.py  mgc_workflow.py  phylo_workflow.py
(+387 files in other folders)
